Deployment/Reliability/GuardedIngress/IngressController/TeaStore/teastore-haproxy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: teastore-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: teastore-namespace
  name: teastore-db
  labels:
    app: teastore
    run: teastore-db
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-db
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-db
    spec:
      containers:
        - name: teastore-db
          image: descartesresearch/teastore-db
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  namespace: teastore-namespace
  name: teastore-db
  labels:
    app: teastore
    run: teastore-db
spec:
  ports:
    - port: 3306
      protocol: TCP
  selector:
    run: teastore-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: teastore-namespace
  name: teastore-registry
  labels:
    app: teastore
    run: teastore-registry
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-registry
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-registry
    spec:
      containers:
        - name: teastore-registry
          image: descartesresearch/teastore-registry
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: teastore-namespace
  name: teastore-registry
  labels:
    app: teastore
    run: teastore-registry
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    run: teastore-registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: teastore-namespace
  name: teastore-persistence
  labels:
    app: teastore
    run: teastore-persistence
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-persistence
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-persistence
    spec:
      containers:
        - name: teastore-persistence
          image: descartesresearch/teastore-persistence
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: teastore-namespace
  name: teastore-persistence
  labels:
    app: teastore
    run: teastore-persistence
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    run: teastore-persistence
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: teastore-namespace
  name: teastore-auth
  labels:
    app: teastore
    run: teastore-auth
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-auth
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-auth
    spec:
      containers:
        - name: teastore-auth
          image: descartesresearch/teastore-auth
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: teastore-namespace
  name: teastore-auth
  labels:
    app: teastore
    run: teastore-auth
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    run: teastore-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: teastore-namespace
  name: teastore-image
  labels:
    app: teastore
    run: teastore-image
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-image
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-image
    spec:
      containers:
        - name: teastore-image
          image: descartesresearch/teastore-image
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: teastore-namespace
  name: teastore-image
  labels:
    app: teastore
    run: teastore-image
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    run: teastore-image
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: teastore-namespace
  name: teastore-recommender
  labels:
    app: teastore
    run: teastore-recommender
spec:
  selector:
    matchLabels:
      app: teastore
      run: teastore-recommender
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-recommender
    spec:
      containers:
        - name: teastore-recommender
          image: descartesresearch/teastore-recommender
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: teastore-namespace
  name: teastore-recommender
  labels:
    app: teastore
    run: teastore-recommender
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    run: teastore-recommender
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: teastore-namespace
  name: teastore-webui
  labels:
    app: teastore
    run: teastore-webui
spec:
  replicas: 1 # adjust 
  selector:
    matchLabels:
      app: teastore
      run: teastore-webui
  template:
    metadata:
      labels:
        app: teastore
        run: teastore-webui
    spec:
      containers:
        - name: teastore-webui
          image: descartesresearch/teastore-webui
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: teastore-namespace
  name: teastore-webui
  labels:
    app: teastore
    run: teastore-webui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: teastore-webui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: teastore-namespace
  name: teastore-ingress
  annotations:
    ingress.class: "haproxy"
    haproxy.org/rate-limit-requests: "15"
    haproxy.org/rate-limit-period: "1m"
    haproxy.org/rate-limit-status-code: "429"
spec:
  ingressClassName: haproxy
  rules:
  - host: "k8s-haproxyc-haproxyk-d745ed3bdd-b4477faf580727c8.elb.us-east-2.amazonaws.com" # insert HAProxy Load Balancer DNS
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teastore-webui
            port:
              number: 8080
